[package]
name = "vesting-wallet-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-stylus.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true
mini-alloc.workspace = true
futures = "0.3.30"

[dev-dependencies]
alloy.workspace = true
eyre.workspace = true
tokio.workspace = true
e2e.workspace = true
koba.workspace = true

[features]
e2e = []

[lib]
crate-type = ["lib", "cdylib"]

